--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,17 +16,17 @@
     <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active">
             <a href="#columnChart-container" role="tab" data-toggle="tab">
-                columnChart-container
+                实时热搜
             </a>
         </li>
         <li role="presentation">
             <a href="#heatmap-container" role="tab" data-toggle="tab">
-                heatmap
+                热力图
             </a>
         </li>
         <li role="presentation">
             <a href="#wordCloud-container" role="tab" data-toggle="tab">
-                wordCloud
+                热词云
             </a>
         </li>
         <li role="presentation">
