--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,7 @@ ul {
   padding: 0;
   margin: 0; }
 
-.chart-container {
+.chart-container, .Tendency-container {
   position: absolute;
   top: 10%;
   width: 100%;
