--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -21,7 +21,7 @@ ul{
 	padding: 0;
 	margin: 0;
 }
-.chart-container{
+.chart-container,.Tendency-container{
 	// min-height: 30rem;
 	position: absolute;
 	top: 10%;
